# Expense-Tracker-API

./: pyproject.toml  run.py
app/: __init__.py  extensions.py
app/api/v1/endpoints/: auth.py  expense.py
app/api/v1/schemas/: auth.py  expense.py
app/models/: basemodel.py  expense.py  user.py
app/persistence/: repository.py
app/service/: facade.py
